# fftw3-cmake-example

./: CMakeLists.txt  CMakeLists.txt.fftw3  CMakeLists.txt.in  README.md
src/: CMakeLists.txt  main.c
